--- a/DoctypeHtml.Tests/DoctypeHtml.Tests.csproj
+++ b/DoctypeHtml.Tests/DoctypeHtml.Tests.csproj
@@ -4,11 +4,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="TUnit" Version="1.13.8" />
+  </ItemGroup>
+    
+  <ItemGroup>
+      <None Update="**\*.html">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
   </ItemGroup>
 
 </Project>
