Tokenizer: basic state handling

--- a/DoctypeHtml.Tests/DoctypeHtml.Tests.csproj
+++ b/DoctypeHtml.Tests/DoctypeHtml.Tests.csproj
@@ -16,5 +16,9 @@
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
   </ItemGroup>
+    
+  <ItemGroup>
+    <ProjectReference Include="..\DoctypeHtml.Parser\DoctypeHtml.Parser.csproj" />
+  </ItemGroup>
 
 </Project>
